Refactored Validator Class
feat: Implements the Iterator interface
feat: Created categories for character literals and block comments
refactor: Validate file to use the getNextChar and parseChar methods
feat: Moved most of the code to parse the character to the parseChar method
refactor: Moved next char code into the iterator methods next and hasNext
feat: Created getEscapedCharacter method to take a sequence as char and parse out the proper escaped character
feat: Added block comment start and end checks
refactor: Added checks to make sure the comment delimiters do not trigger improperly in the get delimiter method